--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
     <nav class="nav1 navbar  navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html" ID="PESCAO"> PESCADO VERGOSO </a>
+          <a class="navbar-brand" href="index.html" ID="PESCAO"> PESCADO Rabioso </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,8 +29,8 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit" onclick()>Añadir producto</button>
             </form>
           </div>
         </div>
